@@ -82,8 +82,6 @@ extern NSString *WebCorePageCacheStateKey;
     id policyTarget;
     SEL policySelector;
     WebFormState *policyFormState;
-    WebDataSource *policyDataSource;
-    WebFrameLoadType policyLoadType;
 
     BOOL justOpenedForTargetedLink;
     BOOL quickRedirectComing;
